@@ -1,3 +1,14 @@
+2012-12-06  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 10.11.0-rc3 Released.
+
+	* chan_local: Fix local_pvt ref leak in local_devicestate().
+
+	Regression introduced by ASTERISK-20390 fix.
+
+	(closes issue ASTERISK-20769)
+	Reported by: rmudgett
+
 2012-12-05  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 10.11.0-rc2 Released.
